syntax = "proto3";
package idp2p.pb;

enum Idp2pKeyAlg {
    ED25519 = 0;
}
enum Idp2pAgreementKeyAlg {
     X25519 = 0;
}

enum Idp2pEncryptionAlg {
    A256CBC_HS512 = 0;
}

enum Idp2pKeyWrappingAlg {
    ECDH_ES_A256KW = 0;
}

message Idp2pKey{
    Idp2pKeyAlg alg = 1;
    bytes public = 2;
}

message Idp2pAgreementKey{
    Idp2pAgreementKeyAlg alg = 1;
    bytes public = 2;
}

message Idp2pProfile {
    string name = 1;
    bytes photo = 2;
}